--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </header>
 
   <main>
+    <table>
     <section>
       <h2>Atualmente</h2>
       <p>
@@ -23,7 +24,8 @@
         💬 Se tiver alguma dúvida ou quiser entrar em contato comigo, fique à vontade para enviar uma mensagem! Estou aberta a novos desafios e compartilhar conhecimentos.
       </p>
     </section>
-
+    </table>
+    <table>
     <section>
       <h2>Sobre Mim</h2>
       <ul>
@@ -32,7 +34,8 @@
         <li>🌱 Aprendendo mais sobre Python, Java, Desenvolvimento Full Stack, Segurança Cibernética e Infraestrutura de Redes 5G.</li>
       </ul>
     </section>
-
+    </table>
+    
     <section class="stats">
       <h2>Estatísticas GitHub</h2>
       <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ForAdami&hide=html&layout=compact&theme=default" alt="Linguagens mais usadas">
