--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfólio - Dalila Adami</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
-<body bgcolor="#C8A2C8" text="#000000">
+<body bgcolor="#C8A2C8" text="#000000" align="center">
   <header>
     <h1>Olá, meu nome é Dalila Adami! 💜</h1>
     <p>Faço parte do mundo da tecnologia, explorando novas linguagens e desenvolvendo soluções inovadoras.</p>
