--- a/index.html
+++ b/index.html
@@ -6,62 +6,73 @@
   <title>Portfólio - Dalila Adami</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
-<body bgcolor="#C8A2C8" text="#000000" align="center">
-  <header>
-    <h1>Olá, meu nome é Dalila Adami! 💜</h1>
-    <p>Faço parte do mundo da tecnologia, explorando novas linguagens e desenvolvendo soluções inovadoras.</p>
-  </header>
-  <main>
-    <section>
-      <h2>Atualmente</h2>
-      <p>
-        🔭 Estou desenvolvendo projetos pessoais que envolvem redes de computadores e segurança cibernética. <br>
-        Sempre à procura de novas oportunidades para aprender e crescer profissionalmente na área de TI.
-      </p>
-      <p>
-        💬 Se tiver alguma dúvida ou quiser entrar em contato comigo, fique à vontade para enviar uma mensagem! Estou aberta a novos desafios e compartilhar conhecimentos.
-      </p>
-    </section>
-    <section>
-      <h2>Sobre Mim</h2>
-      <ul>
-        <li>🤔 Explorando novas tecnologias e desenvolvendo soluções de software.</li>
-        <li>🎓 Estudando Análise e Desenvolvimento de Sistemas no Centro Universitário Farias Brito.</li>
-        <li>🌱 Aprendendo mais sobre Python, Java, Desenvolvimento Full Stack, Segurança Cibernética e Infraestrutura de Redes 5G.</li>
-      </ul>
-    </section>
-    
-    <section class="stats">
-      <h2>Estatísticas GitHub</h2>
-      <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ForAdami&hide=html&layout=compact&theme=default" alt="Linguagens mais usadas">
-      <img src="https://github-readme-stats.vercel.app/api?username=ForAdami&theme=radical&show_icons=true" alt="GitHub stats">
-    </section>
+<body bgcolor="#C8A2C8" text="#000000">
+  <table align="center" width="800" cellpadding="20">
+    <tr>
+      <td align="left">
 
-    <section>
-      <h2>Minhas Skills</h2>
-      <div class="badges">
-        <img src="https://img.shields.io/badge/Cisco%20Packet%20Tracer-blue?style=for-the-badge&logo=cisco&logoColor=white" alt="Cisco Packet Tracer">
-        <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java">
-        <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5">
-        <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3">
-        <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python">
-        <img src="https://img.shields.io/badge/Microsoft_Office-D83B01?style=for-the-badge&logo=microsoft-office&logoColor=white" alt="Microsoft Office">
-        <img src="https://img.shields.io/badge/Windows-017AD7?style=for-the-badge&logo=windows&logoColor=white" alt="Windows">
-        <img src="https://img.shields.io/badge/Linux-E34F26?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
-      </div>
-    </section>
+        <header>
+          <h1><font color="#000000">Olá, meu nome é Dalila Adami! 💜</font></h1>
+          <p><font color="#000000">Faço parte do mundo da tecnologia, explorando novas linguagens e desenvolvendo soluções inovadoras.</font></p>
+        </header>
 
-    <section>
-      <h2>Onde me encontrar</h2>
-      <div class="social-links">
-        <a href="https://www.linkedin.com/in/dalila-adami-6066562b9/" target="_blank">
-          <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
-        </a>
-        <a href="mailto:adsporadami@gmail.com">
-          <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="Gmail">
-        </a>
-      </div>
-    </section>
-  </main>
+        <main>
+          <section>
+            <h2><font color="#000000">Atualmente</font></h2>
+            <p><font color="#000000">
+              🔭 Estou desenvolvendo projetos pessoais que envolvem redes de computadores e segurança cibernética. <br>
+              Sempre à procura de novas oportunidades para aprender e crescer profissionalmente na área de TI.
+            </font></p>
+            <p><font color="#000000">
+              💬 Se tiver alguma dúvida ou quiser entrar em contato comigo, fique à vontade para enviar uma mensagem! Estou aberta a novos desafios e compartilhar conhecimentos.
+            </font></p>
+          </section>
+
+          <section>
+            <h2><font color="#000000">Sobre Mim</font></h2>
+            <ul>
+              <li><font color="#000000">🤔 Explorando novas tecnologias e desenvolvendo soluções de software.</font></li>
+              <li><font color="#000000">🎓 Estudando Análise e Desenvolvimento de Sistemas no Centro Universitário Farias Brito.</font></li>
+              <li><font color="#000000">🌱 Aprendendo mais sobre Python, Java, Desenvolvimento Full Stack, Segurança Cibernética e Infraestrutura de Redes 5G.</font></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2><font color="#000000">Estatísticas GitHub</font></h2>
+            <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ForAdami&hide=html&layout=compact&theme=default" alt="Linguagens mais usadas">
+            <br>
+            <img src="https://github-readme-stats.vercel.app/api?username=ForAdami&theme=radical&show_icons=true" alt="GitHub stats">
+          </section>
+
+          <section>
+            <h2><font color="#000000">Minhas Skills</font></h2>
+            <div class="badges">
+              <img src="https://img.shields.io/badge/Cisco%20Packet%20Tracer-blue?style=for-the-badge&logo=cisco&logoColor=white" alt="Cisco Packet Tracer">
+              <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java">
+              <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5">
+              <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3">
+              <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python">
+              <img src="https://img.shields.io/badge/Microsoft_Office-D83B01?style=for-the-badge&logo=microsoft-office&logoColor=white" alt="Microsoft Office">
+              <img src="https://img.shields.io/badge/Windows-017AD7?style=for-the-badge&logo=windows&logoColor=white" alt="Windows">
+              <img src="https://img.shields.io/badge/Linux-E34F26?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
+            </div>
+          </section>
+
+          <section>
+            <h2><font color="#000000">Onde me encontrar</font></h2>
+            <div class="social-links">
+              <a href="https://www.linkedin.com/in/dalila-adami-6066562b9/" target="_blank">
+                <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
+              </a>
+              <a href="mailto:adsporadami@gmail.com">
+                <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="Gmail">
+              </a>
+            </div>
+          </section>
+        </main>
+
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
