--- a/index.html
+++ b/index.html
@@ -4,60 +4,59 @@
   <meta charset="UTF-8">
   <title>Portfólio - Dalila Adami</title>
 </head>
-<body bgcolor="#C8A2C8" text="#000000">
+<body>
 
-  <table width="800" align="center" cellpadding="20">
-    <tr>
-      <td>
+  <h1>Olá, meu nome é Dalila Adami! 💜</h1>
+  <p>Faço parte do mundo da tecnologia, explorando novas linguagens e desenvolvendo soluções inovadoras.</p>
 
-        <h1>Olá, meu nome é Dalila Adami! 💜</h1>
-        <p>Faço parte do mundo da tecnologia, explorando novas linguagens e desenvolvendo soluções inovadoras.</p>
+  <h2>Atualmente</h2>
+  <p>
+    🔭 Estou desenvolvendo projetos pessoais que envolvem redes de computadores e segurança cibernética.<br>
+    Sempre à procura de novas oportunidades para aprender e crescer profissionalmente na área de TI.
+  </p>
+  <p>
+    💬 Se tiver alguma dúvida ou quiser entrar em contato comigo, fique à vontade para enviar uma mensagem!<br>
+    Estou aberta a novos desafios e compartilhar conhecimentos.
+  </p>
 
-        <h2>Atualmente</h2>
-        <p>
-          🔭 Estou desenvolvendo projetos pessoais que envolvem redes de computadores e segurança cibernética. <br>
-          Sempre à procura de novas oportunidades para aprender e crescer profissionalmente na área de TI.
-        </p>
-        <p>
-          💬 Se tiver alguma dúvida ou quiser entrar em contato comigo, fique à vontade para enviar uma mensagem! Estou aberta a novos desafios e compartilhar conhecimentos.
-        </p>
+  <h2>Sobre Mim</h2>
+  <ul>
+    <li>🤔 Explorando novas tecnologias e desenvolvendo soluções de software.</li>
+    <li>🎓 Estudando Análise e Desenvolvimento de Sistemas no Centro Universitário Farias Brito.</li>
+    <li>🌱 Aprendendo mais sobre Python, Java, Desenvolvimento Full Stack, Segurança Cibernética e Infraestrutura de Redes 5G.</li>
+  </ul>
 
-        <h2>Sobre Mim</h2>
-        <ul>
-          <li>🤔 Explorando novas tecnologias e desenvolvendo soluções de software.</li>
-          <li>🎓 Estudando Análise e Desenvolvimento de Sistemas no Centro Universitário Farias Brito.</li>
-          <li>🌱 Aprendendo mais sobre Python, Java, Desenvolvimento Full Stack, Segurança Cibernética e Infraestrutura de Redes 5G.</li>
-        </ul>
+  <h2>Estatísticas GitHub</h2>
+  <p>
+    <a href="https://github.com/anuraghazra/github-readme-stats">
+      <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ForAdami&hide=html&layout=compact&theme=default" alt="Linguagens mais usadas">
+    </a><br>
+    <a href="https://github.com/anuraghazra/github-readme-stats">
+      <img src="https://github-readme-stats.vercel.app/api?username=ForAdami&theme=radical&show_icons=true" alt="GitHub stats">
+    </a>
+  </p>
 
-        <h2>Estatísticas GitHub</h2>
-        <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ForAdami&hide=html&layout=compact&theme=default" alt="Linguagens mais usadas"><br>
-        <img src="https://github-readme-stats.vercel.app/api?username=ForAdami&theme=radical&show_icons=true" alt="GitHub stats">
+  <h2>Minhas Skills</h2>
+  <p>
+    <img src="https://img.shields.io/badge/Cisco%20Packet%20Tracer-blue?style=for-the-badge&logo=cisco&logoColor=white" alt="Cisco Packet Tracer"><br>
+    <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java"><br>
+    <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5"><br>
+    <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3"><br>
+    <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python"><br>
+    <img src="https://img.shields.io/badge/Microsoft_Office-D83B01?style=for-the-badge&logo=microsoft-office&logoColor=white" alt="Microsoft Office"><br>
+    <img src="https://img.shields.io/badge/Windows-017AD7?style=for-the-badge&logo=windows&logoColor=white" alt="Windows"><br>
+    <img src="https://img.shields.io/badge/Linux-E34F26?style=for-the-badge&logo=linux&logoColor=black" alt="Linux"><br>
+  </p>
 
-        <h2>Minhas Skills</h2>
-        <p>
-          <img src="https://img.shields.io/badge/Cisco%20Packet%20Tracer-blue?style=for-the-badge&logo=cisco&logoColor=white" alt="Cisco Packet Tracer">
-          <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white" alt="Java">
-          <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5">
-          <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3">
-          <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python">
-          <img src="https://img.shields.io/badge/Microsoft_Office-D83B01?style=for-the-badge&logo=microsoft-office&logoColor=white" alt="Microsoft Office">
-          <img src="https://img.shields.io/badge/Windows-017AD7?style=for-the-badge&logo=windows&logoColor=white" alt="Windows">
-          <img src="https://img.shields.io/badge/Linux-E34F26?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
-        </p>
-
-        <h2>Onde me encontrar</h2>
-        <p>
-          <a href="https://www.linkedin.com/in/dalila-adami-6066562b9/" target="_blank">
-            <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
-          </a>
-          <a href="mailto:adsporadami@gmail.com">
-            <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="Gmail">
-          </a>
-        </p>
-
-      </td>
-    </tr>
-  </table>
+  <h2>Onde me encontrar</h2>
+  <p>
+    <a href="https://www.linkedin.com/in/dalila-adami-6066562b9/">
+      <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
+    </a><br>
+    <a href="mailto:adsporadami@gmail.com">
+      <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="Gmail">
+    </a>
+  </p>
 
 </body>
 </html>
